--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,27 @@
-<p>dashboard works!</p>
+<div class="mb-4 mt-2">
+    <h4>สถิติการเข้าใช้งาน</h4>
+    <hr>
+</div>
+
+<div class="row text-center mb-5">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-header">เวลาใช้งาน</div>
+            <div class="card-body">
+                <h3>{{userScore.watch_time/60}}</h3>
+                นาที
+            </div> 
+          </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-header">คะแนนทั้งหมด</div>
+            <div class="card-body">
+                <h3>{{userScore.total_score}}</h3>
+                คะแนน
+            </div>
+        </div>
+    </div>
+</div>
+
+<canvas id="myChart" width="400" height="250"></canvas>
