--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -19,7 +19,7 @@
                             <label for="floatingInput">คำนำหน้า</label>
                         </div>
                         <div *ngIf="title_id?.invalid && (title_id?.dirty || title_id?.touched)" class="text-danger fade show mt-1">
-                            <div *ngIf="title_id?.errors?.['required']">Title is required.</div>
+                            <div *ngIf="title_id?.errors?.['required']">กรุณาเลือกคำนำหน้าชื่อ</div>
                         </div>
 
                         <div class="form-floating mt-3 ">
@@ -27,7 +27,7 @@
                             <label for="floatingInput">ชื่อ</label>
                         </div>
                         <div *ngIf="fname?.invalid && (fname?.dirty || fname?.touched)" class="text-danger fade show mt-1">
-                            <div *ngIf="fname?.errors?.['required']">Firstname is required.</div>
+                            <div *ngIf="fname?.errors?.['required']">กรุณากรอกชื่อจริง</div>
                         </div>
 
                         <div class="form-floating mt-3">
@@ -35,7 +35,7 @@
                             <label for="floatingInput">นามสกุล</label>
                         </div>
                         <div *ngIf="lname?.invalid && (lname?.dirty || lname?.touched)" class="text-danger fade show mt-1">
-                            <div *ngIf="lname?.errors?.['required']">Lastname is required.</div>
+                            <div *ngIf="lname?.errors?.['required']">กรุณากรอกนามสกุล</div>
                         </div>
 
                         <div class="form-floating mt-3">
@@ -43,8 +43,8 @@
                             <label for="floatingInput">อีเมล์</label>
                         </div>
                         <div *ngIf="email?.invalid && (email?.dirty || email?.touched)" class="text-danger fade show mt-1">
-                            <div *ngIf="email?.errors?.['required']">Email is required.</div>
-                            <div *ngIf="email?.errors?.['email']">Invalid email format.</div>
+                            <div *ngIf="email?.errors?.['required']">กรุณากรอกอีเมล์</div>
+                            <div *ngIf="email?.errors?.['email']">กรุณากรอกอีเมล์ให้ถูกต้อง</div>
                         </div>
 
                         <div class="form-floating mt-3">
@@ -52,7 +52,7 @@
                             <label for="floatingInput">เบอร์โทรศัพท์</label>
                         </div>
                         <div *ngIf="tel?.invalid && (tel?.dirty || tel?.touched)" class="text-danger fade show mt-1">
-                            <div *ngIf="tel?.errors?.['required']">Telephone number is required.</div>
+                            <div *ngIf="tel?.errors?.['required']">กรุณากรอกเบอร์โทรศัพท์</div>
                         </div>
 
                         <div class="form-floating mt-3">
@@ -62,7 +62,7 @@
                             <label for="floatingInput">สังกัด</label>
                         </div>
                         <div *ngIf="institution_id?.invalid && (institution_id?.dirty || institution_id?.touched)" class="text-danger fade show mt-1">
-                            <div *ngIf="institution_id?.errors?.['required']">Institution is required.</div>
+                            <div *ngIf="institution_id?.errors?.['required']">กรุณาเลือกต้นสังกัด</div>
                         </div>
                     </div>
                     <div class="mx-4 mt-5">
@@ -73,7 +73,7 @@
                             <label for="floatingInput">ชื่อผู้ใช้งาน</label>
                         </div>
                         <div *ngIf="username?.invalid && (username?.dirty || username?.touched)" class="text-danger fade show mt-1">
-                            <div *ngIf="username?.errors?.['required']">Username is required.</div>
+                            <div *ngIf="username?.errors?.['required']">กรุณากรอกชื่อผู้ใช้งาน</div>
                         </div>
 
                         <div class="form-floating mt-3">
@@ -81,14 +81,14 @@
                             <label for="floatingInput">รหัสผ่าน</label>
                         </div>
                         <div *ngIf="password?.invalid && (password?.dirty || password?.touched)" class="text-danger fade show mt-1">
-                            Password is required and must be at least 6 characters long.
+                            กรุณากรอกรหัสผ่าน และต้องมีความยาวอย่างน้อย 6 ตัวอักษร
                         </div>
                         <div class="form-floating mt-3">
                             <input type="password" class="form-control" placeholder="ยืนยันรหัสผ่าน" formControlName="confirmPassword">
                             <label for="floatingInput">ยืนยันรหัสผ่าน</label>
                         </div>
                         <div *ngIf="signUpForm?.hasError('passwordMismatch') && (confirmPassword?.dirty || confirmPassword?.touched)" class="text-danger fade show mt-1">
-                                Passwords do not match.
+                            รหัสผ่านยืนยันไม่ตรงกับรหัสผ่าน
                         </div>
                     </div>
                     <div class="mx-4 mt-3 mb-3">
