--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -11,11 +11,11 @@
       <div class="row">
           <div class="col-4">
               เวลาทั้งหมด
-              <p>{{userScore.watch_time}}</p>
+              <p>{{watch_time/60}}</p>
           </div>
           <div class="col-4">
               คะแนน
-              <p>{{userScore.total_score}}</p>
+              <p>{{total_score}}</p>
           </div>
           <div class="col-4">
               อันดับ
