--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,3 +1,7 @@
+<div class="mb-4 mt-2">
+    <h4>ข้อมูลผู้ใช้งาน</h4>
+    <hr>
+</div>
 <div class="text-center mb-4">
     <img src="https://www.w3schools.com/bootstrap5/img_avatar3.png" style="width: 100px;" alt="Logo" class="rounded-circle img-fluid">
 </div>
