add autoUpdate successfully

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
         <div class="card">
             <div class="card-header">เวลาใช้งาน</div>
             <div class="card-body">
-                <h3>{{watch_time/60}}</h3>
+                <h3>{{watch_time/60 | number:'1.2-2'}}</h3>
                 นาที
             </div> 
           </div>
