--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <img src="assets/images/eng-logo.png" width="25%" alt="Logo" class="img-fluid">
   </div>
   <div class="text-center mb-2">
-    <h3>SMART DESK</h3>
+    <h3>Desk Health</h3>
   </div>
   <h2>วิสัยทัศน์</h2>
   <p>
