--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -15,7 +15,7 @@
       <div class="row">
           <div class="col-4">
               เวลาทั้งหมด
-              <p>{{watch_time/60}}</p>
+              <p>{{watch_time/60 | number:'1.2-2'}}</p>
           </div>
           <div class="col-4">
               คะแนน
