--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -4,7 +4,7 @@
         <div class="text-center mb-4">
           <img src="assets/images/eng-logo.png" width="20%" alt="Logo" class="img-fluid">
         </div>
-        <h2 class="text-center mb-4" style="color: #2d3c44;">SMART DESK</h2>
+        <h2 class="text-center mb-4" style="color: #2d3c44;">Desk Health</h2>
         <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
             <div class="form-floating">
               <input type="text" class="form-control" id="username" placeholder="Username" formControlName="username">
