--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 body {
   min-height: 100vh;
   min-height: -webkit-fill-available;
-  overflow-x: auto;
+  overflow-x: hidden;
   overflow-y: auto;
   //font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 12pt;
