--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -6,24 +6,24 @@
     <img src="https://www.w3schools.com/bootstrap5/img_avatar3.png" style="width: 100px;" alt="Logo" class="rounded-circle img-fluid">
 </div>
 <div class="text-center mb-2">
-<h4 class="mb-2">{{ userData.username }}</h4>
-  <p class="text-muted mb-2">ชื่อ - สกุล : {{userData.title}} {{userData.fname}} {{userData.lname}} </p>
-  <p class="text-muted mb-2">สังกัด : {{userData.institution}}</p>
-  <p class="text-muted mb-2"><a href="#!">{{userData.email}}</a></p>
+<h4 class="mb-2">{{ userProfile.username }}</h4>
+  <p class="text-muted mb-2">ชื่อ - สกุล : {{userProfile.title}} {{userData.fname}} {{userData.lname}} </p>
+  <p class="text-muted mb-2">สังกัด : {{userProfile.institution}}</p>
+  <p class="text-muted mb-2">{{userProfile.email}}</p>
   <hr>
   <div class="counter-block m-t-10 p-20">
       <div class="row">
           <div class="col-4">
               เวลาทั้งหมด
-              <p>{{watch_time/60 | number:'1.2-2'}}</p>
+              <p>{{userScore.watch_time/60 | number:'1.2-2'}}</p>
           </div>
           <div class="col-4">
               คะแนน
-              <p>{{total_score}}</p>
+              <p>{{userScore.total_score}}</p>
           </div>
           <div class="col-4">
               อันดับ
-              <p>{{userData.rank}}</p>
+              <p>{{userProfile.rank}}</p>
           </div>
       </div>
   </div>
