--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -21,7 +21,7 @@
         <i class="bi-person-circle h2"></i>
       </a>
       <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser3">
-        <li><a routerLink="setting" routerLinkActive="active" class="dropdown-item">เกี่ยวกับ</a></li>
+        <li><a routerLink="setting" routerLinkActive="active" class="dropdown-item">เกี่ยวกับเรา</a></li>
         <li><a routerLink="profile" routerLinkActive="active" class="dropdown-item">ข้อมูลผู้ใช้งาน</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" (click)="signout()">ออกจากระบบ</a></li>
