--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -7,7 +7,7 @@
 </div>
 <div class="text-center mb-2">
 <h4 class="mb-2">{{ userProfile.username }}</h4>
-  <p class="text-muted mb-2">ชื่อ - สกุล : {{userProfile.title}} {{userData.fname}} {{userData.lname}} </p>
+  <p class="text-muted mb-2">ชื่อ - สกุล : {{userProfile.title}} {{userProfile.fname}} {{userProfile.lname}} </p>
   <p class="text-muted mb-2">สังกัด : {{userProfile.institution}}</p>
   <p class="text-muted mb-2">{{userProfile.email}}</p>
   <hr>
