--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="loading" *ngIf="isLoading">
   <div class="spinner"></div>
-  Loading...
+  กำลังโหลด...
 </div>
 <div class="content" *ngIf="!isLoading">
     <router-outlet></router-outlet>
