--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid">
+<div class="container-fluid" style="background-image: url('assets/images/background-1.png'); background-size: cover; background-repeat: no-repeat; height: 100vh;">
     <app-menu></app-menu>
     <div class="container mt-3">
         <router-outlet></router-outlet>
