--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,25 +1,32 @@
 <div class="text-center mb-4">
-    <img src="assets/images/eng-logo.png" width="25%" alt="Logo" class="img-fluid">
-  </div>
-  <div class="text-center mb-2">
-    <h3>Desk Health</h3>
-  </div>
-  <h2>วิสัยทัศน์</h2>
+    <img src="assets/images/eng-title-logo.png" width="80%" alt="Logo" class="img-fluid">
+</div>
+
+<h1 class="h4 font-weight-normal">วิสัยทัศน์</h1>
+<hr/>
+<div class="mb-1">
   <p>
     เป็นองค์กรที่โดดเด่นในการสร้างกำลังคนและความรู้ด้านวิศวกรรมศาสตร์ของประเทศ เป้าหมาย: เป็น 1 ใน 3 ของประเทศด้านวิศวกรรมศาสตร์ ภายในปี พ.ศ. 2568
   </p>
-  <hr/>
-  <h2>พันธกิจ</h2>
-    <ol>
-      <li>ผลิตและพัฒนากำลังคนทางด้านวิศวกรรมศาสตร์ที่มีความรู้และทักษะพร้อมในการทำงานภาคอุตสาหกรรม</li>
-      <li>วิจัยและพัฒนาทางด้านวิศวกรรมศาสตร์ที่ตอบสนองความต้องการของประเทศและภูมิภาค</li>
-      <li>บริการวิชาการ ปรับแปลง และถ่ายทอดเทคโนโลยี เพื่อส่งเสริมศักยภาพในการแข่งขันของภาคอุตสาหกรรมและบริการของประเทศและสร้างสรรค์คุณค่าแก่สังคม</li>
-    </ol>
-  <hr>
-  <h2>ค่านิยม “WELL”</h2>
-    <ol>
-      <li>การทำงานอย่างชาญฉลาดบนพื้นฐานของข้อมูลจริง (Work Smart Based on Fact)</li>
-      <li>การมุ่งเน้นผลลัพธ์ที่มีคุณค่าต่อผู้เรียน และลูกค้ากลุ่มอื่น (Excellence)</li>
-      <li>การเรียนรู้อย่างต่อเนื่องและทันต่อการเปลี่ยนแปลง (Learning and Agility)</li>
-      <li>การเป็นผู้นำนวัตกรรมเพื่อสังคม (Leading Innovation for Society)</li>
-    </ol>
+</div>
+
+
+<h1 class="h4 font-weight-normal">พันธกิจ</h1>
+<hr/>
+<div class="mb-1">
+  <ol>
+    <li>ผลิตและพัฒนากำลังคนทางด้านวิศวกรรมศาสตร์ที่มีความรู้และทักษะพร้อมในการทำงานภาคอุตสาหกรรม</li>
+    <li>วิจัยและพัฒนาทางด้านวิศวกรรมศาสตร์ที่ตอบสนองความต้องการของประเทศและภูมิภาค</li>
+    <li>บริการวิชาการ ปรับแปลง และถ่ายทอดเทคโนโลยี เพื่อส่งเสริมศักยภาพในการแข่งขันของภาคอุตสาหกรรมและบริการของประเทศและสร้างสรรค์คุณค่าแก่สังคม</li>
+  </ol>
+</div>
+
+
+<h1 class="h4 font-weight-normal">ค่านิยม “WELL”</h1>
+<hr/>
+<ol>
+  <li>การทำงานอย่างชาญฉลาดบนพื้นฐานของข้อมูลจริง (Work Smart Based on Fact)</li>
+  <li>การมุ่งเน้นผลลัพธ์ที่มีคุณค่าต่อผู้เรียน และลูกค้ากลุ่มอื่น (Excellence)</li>
+  <li>การเรียนรู้อย่างต่อเนื่องและทันต่อการเปลี่ยนแปลง (Learning and Agility)</li>
+  <li>การเป็นผู้นำนวัตกรรมเพื่อสังคม (Leading Innovation for Society)</li>
+</ol> 
