--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -8,7 +8,7 @@
 <div class="text-center mb-2">
 <h4 class="mb-2">{{ userProfile.username }}</h4>
   <p class="text-muted mb-2">ชื่อ - สกุล : {{userProfile.title}} {{userProfile.fname}} {{userProfile.lname}} </p>
-  <p class="text-muted mb-2">สังกัด : {{userProfile.institution}}</p>
+  <p class="text-muted mb-2">หน่วยงาน : {{userProfile.institution}}</p>
   <p class="text-muted mb-2">{{userProfile.email}}</p>
   <hr>
   <div class="counter-block m-t-10 p-20">
