--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -1,8 +1,8 @@
-<div class="container">
-    <div class="row justify-content-center mt-5">
+<div class="container-fluid p-4" style="background-image: url('assets/images/background-1.png'); background-size: cover; background-repeat: no-repeat; height: 100vh;">
+    <div class="row justify-content-center h-100 mt-3">
       <div class="col-lg-4 col-md-6">
         <div class="text-center mb-4">
-          <img src="assets/images/eng-logo.png" width="20%" alt="Logo" class="img-fluid">
+          <img src="assets/icons/eng-logo.png" width="20%" alt="Logo" class="img-fluid">
         </div>
         <h1 class="h3 mb-3 font-weight-normal mb-4 text-center " style="color: #2d3c44;">Desk Health</h1>
         <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
@@ -29,7 +29,7 @@
             <div class="mb-4 mt-4">
               <button id="myBtn" class="btn btn-lg btn-primary btn-block w-100" [disabled]="loading">
                 <span class="spinner-grow spinner-grow-sm" *ngIf="loading"  role="status" aria-hidden="true"></span>
-                {{ loading ? 'Loading...' : 'เข้าสู่ระบบ' }}
+                {{ loading ? 'กำลังโหลด...' : 'เข้าสู่ระบบ' }}
             </button>
             </div>
         </form>
@@ -37,3 +37,4 @@
       </div>
     </div>
 </div>
+
