--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -2,7 +2,7 @@
     <div class="row justify-content-center h-100 mt-3">
       <div class="col-lg-4 col-md-6">
         <div class="text-center mb-4">
-          <img src="assets/icons/eng-logo.png" width="20%" alt="Logo" class="img-fluid">
+          <img src="assets/images/eng-logo.png" width="20%" alt="Logo" class="img-fluid">
         </div>
         <h1 class="h3 mb-3 font-weight-normal mb-4 text-center " style="color: #2d3c44;">Desk Health</h1>
         <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
