--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <img src="assets/images/eng-title-logo.png" width="80%" alt="Logo" class="img-fluid">
 </div>
 
-<h1 class="h4 font-weight-normal">วิสัยทัศน์</h1>
+<h1 class="h4 font-weight-normal custom-color">วิสัยทัศน์</h1>
 <hr/>
 <div class="mb-1">
   <p>
@@ -11,7 +11,7 @@
 </div>
 
 
-<h1 class="h4 font-weight-normal">พันธกิจ</h1>
+<h1 class="h4 font-weight-normal custom-color">พันธกิจ</h1>
 <hr/>
 <div class="mb-1">
   <ol>
@@ -22,7 +22,7 @@
 </div>
 
 
-<h1 class="h4 font-weight-normal">ค่านิยม “WELL”</h1>
+<h1 class="h4 font-weight-normal custom-color">ค่านิยม “WELL”</h1>
 <hr/>
 <ol>
   <li>การทำงานอย่างชาญฉลาดบนพื้นฐานของข้อมูลจริง (Work Smart Based on Fact)</li>
