--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -13,3 +13,7 @@
   ol {
     font-size: 15px; /* Adjust the font size as needed */
   }
+
+  .custom-color {
+    color: #880a1f; /* Change to the desired color */
+  }
