--- a/src/app/components/setting/setting.component.html
+++ b/src/app/components/setting/setting.component.html
@@ -1,4 +1,33 @@
 <div class="mb-4 mt-2">
-    <h4>เกี่ยวกับเรา</h4>
+    <h1 class="h4 font-weight-normal">เกี่ยวกับเรา</h1>
     <hr>
+</div>
+<div class="card mb-5">
+    <div class="card-header">สำนักวิชาวิศวกรรมศาสตร์</div>
+    <div class="card-body">
+        <p>
+        อาคารวิชาการ 1 มหาวิทยาลัยเทคโนโลยีสุรนารี 111 
+        ถ.มหาวิทยาลัย ต.สุรนารี อ.เมือง จ.นครราชสีมา 30000
+      </p>
+    </div>
+</div>
+
+<div class="card mb-5">
+    <div class="card-header">ข้อมูลการติดต่อ</div>
+    <div class="card-body">
+        <ul>
+            <li>ieadmin@g.sut.ac.th</li>
+            <li>โทรศัพท์ +66-44-22-4224</li>
+            <li>โทรสาร +66-44-22-4220</li>
+        </ul>
+    </div>
+</div>
+
+<div class="card">
+    <div class="card-header">โทรศัพท์ติดต่อ</div>
+    <div class="card-body">
+        <ul>
+            <li>โทรศัพท์ +66-44-22-4224</li>
+        </ul> 
+    </div>
 </div>
